<resources>
    <string name="app_name">fifish</string>
    <string name="home">首页</string>
    <string name="media">媒体</string>
    <string name="device">设备</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="please_input">请输入</string>
    <string name="phone_num">邮箱</string>
    <string name="input_check_code">输入验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_update">确认修改</string>
    <string name="get_code">获取验证码</string>
    <string name="support_your">赞了你的</string>
    <string name="new_fans">新的粉丝</string>
    <string name="title_forget_password">忘记密码</string>
    <string name="job">职业</string>
    <string name="area">地区</string>
    <string name="user_name">用户名</string>
    <string name="confirm">确定</string>
    <string name="complete_user_info">完善个人信息</string>
    <string name="forget_password">忘记密码?</string>
    <string name="add_video_des">添加视频说明</string>
    <string name="add_pic_des">添加图片说明</string>
    <string name="used_times">使用次数:</string>
    <string name="update_header_picture">更换头像</string>
    <string name="search">搜索</string>
    <string name="search_user">搜索用户</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password">账户密码</string>
    <string name="quick_login">快速登录</string>
    <string name="register_now">立即注册</string>
    <string name="no_account">还没有账号?&#160;&#160;&#160;&#160;立即注册</string>
    <string name="has_account">已有账号?&#160;&#160;&#160;&#160;立即登录</string>
    <string name="third_login_error">登录失败</string>
    <string name="input_init_password">请填写原密码</string>
    <string name="init_password">原密码</string>
    <string name="system_settings">设置</string>
    <string name="conform_new_password">确认新密码</string>
    <string name="cancel_login">您取消了登录</string>
    <string name="input_new_password">请填写新密码</string>
    <string name="update_password_success">密码已修改</string>
    <string name="input_confirm_password">请确认新密码</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="confirm_not_equal_new_password">新密码和确认密码不相同</string>
    <string name="init_equals_new_password">原密码和新密码不能相同</string>
    <string name="input_reply_content">请输入回复内容</string>
    <string name="update_success">更新成功</string>
    <string name="products">作品</string>
    <string name="products_num">个作品</string>
    <string name="title_add_location">添加位置</string>
    <string name="input_tag">请输入标签</string>
    <string name="focus">关注</string>
    <string name="focused">已关注</string>
    <string name="fans">粉丝</string>
    <string name="message">消息</string>
    <string name="title_support">赞过</string>
    <string name="support">赞</string>
    <string name="title_favorite">喜欢</string>
    <string name="receive_support">收到的赞</string>
    <string name="tips_no_content">暂无数据</string>
    <string name="feedback">用户反馈</string>
    <string name="about_us">关于飞行鱼</string>
    <string name="title_tag">标签</string>
    <string name="title_label">添加标签</string>
    <string name="feed_back">意见反馈</string>
    <string name="complete">完成</string>
    <string name="personal_data">个人资料</string>
    <string name="user_avatar">头像</string>
    <string name="nick_name">用户名（昵称）</string>
    <string name="user_signature">个性签名</string>
    <string name="user_sex">性别</string>
    <string name="user_birthday">生日</string>
    <string name="user_auth">官方认证</string>
    <string name="user_code">我的二维码</string>
    <string name="user_area">地区</string>
    <string name="input_signature">您还没有个性签名</string>
    <string name="map_no_result">抱歉,没有检索到结果</string>
    <string name="select_birth">请选择出生日期</string>
    <string name="select_gender">请选择性别</string>
    <string name="select_tag">请选择个性标签</string>
    <string name="select_city">选择城市</string>
    <string name="select_address">选择地址</string>
    <string name="save">保存</string>
    <string name="select_a_city">请选择城市</string>
    <string name="select_a_province">请选择省份</string>
    <string name="cancel">取消</string>
    <string name="title_modify_nickname">修改昵称</string>
    <string name="update_avatar">上传头像</string>
    <string name="look_more">更多</string>
    <string name="hot_tags">热门标签</string>
    <string name="hot_user">热门用户</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="reply_to">回复</string>
    <string name="title_comment">评论</string>
    <string name="add_address">添加地址</string>
    <string name="add_tag"># 添加标签</string>
    <string name="title_share">分享</string>
    <string name="share_to">分享到</string>
    <string name="search_sites">搜索地址</string>
    <string name="exit_success">已退出登录</string>
    <string name="feedback_tips">感谢您的反馈！</string>
    <string name="feedback_null">反馈内容不能为空！</string>
    <string name="publish_products">发布</string>
    <string name="publish_success">发布成功！</string>
    <string name="publish_content_length">发布内容需大于5个长度</string>
    <string name="password_null">请输入密码</string>
    <string name="video_products">视频</string>
    <string name="picture_products">图片</string>
    <string name="user">用户</string>
    <string name="facebook_app_id">322451778141956</string>
    <string-array name="user_gender">
        <item>保密</item>
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="share_way">
        <item>微信</item>
        <item>微博</item>
        <item>QQ</item>
        <item>facebook</item>
        <item>instagram</item>
    </string-array>
    <string-array name="support_products">
        <item>图片</item>
        <item>视频</item>
    </string-array>

    <string-array name="search_type">
        <item>视频</item>
        <item>图片</item>
        <item>用户</item>
    </string-array>
    <string-array name="user_tags">
        <item>创业先锋</item>
        <item>IT互联网</item>
        <item>设计师</item>
        <item>女神</item>
        <item>公务员</item>
        <item>职场新人</item>
        <item>女强人</item>
        <item>白领</item>
        <item>学生</item>
        <item>买手</item>
        <item>程序猿</item>
        <item>BOSS</item>
        <item>直男</item>
        <item>驴友</item>
        <item>吃货</item>
        <item>单身</item>
        <item>文艺范</item>
    </string-array>
    <string name="select_tag_tip">选择一个标签或输入15字以内的描述</string>
    <string-array name="official_tags">
        <item>大咖</item>
        <item>行家</item>
        <item>媒体</item>
        <item>摄影师</item>
        <item>匠人</item>
        <item>CEO</item>
        <item>设计狮</item>
        <item>红人</item>
        <item>诗人</item>
    </string-array>
    <string-array name="help_step_arr">
        <item>1、打开Rov设备电源</item>
        <item>2、打开中继设备电源</item>
        <item>3、连接线缆</item>
        <item>4、移动设备连接到中继设备的WiFi</item>
    </string-array>

    <string-array name="dialog_bottom">
        <item>举报</item>
        <item>取消</item>
    </string-array>

    <string-array name="dialog_report">
        <item>垃圾内容</item>
        <item>内容不雅</item>
        <item>取消</item>
    </string-array>

    <string-array name="link_help_arr">
        <item>下一步</item>
        <item>下一步</item>
        <item>下一步</item>
        <item>完成</item>
    </string-array>

    <string name="l_album_name_all">最近图片</string>
    <string name="l_album_name_selected">选择图片</string>
    <string name="l_album_name_camera">相机</string>
    <string name="l_album_name_download">下载</string>
    <string name="l_album_name_screen_shot">屏幕截图</string>
    <string name="l_confirm_dialog_title">提示</string>
    <string name="l_confirm_dialog_message">您确定要放弃本次选择的图片吗?</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_right_email">请输入正确邮箱</string>
    <string name="request_error">网络错误</string>

    <string name="unit">度量单位</string>
    <string name="foot">英尺</string>
    <string name="meter">米</string>
    <string name="temperature">温度</string>
    <string name="degree_centigrade">摄氏度（C）</string>
    <string name="degree_fahrenheit">华氏度（F）</string>
    <string name="mode">模式</string>
    <string name="low_light">低照度</string>
    <string name="common_set">通用设置</string>
    <string name="image_set">图像设置</string>
    <string name="encode_set">编码设置</string>
    <string name="depth_meter">深度：米</string>
    <string name="depth_foot">深度：英尺</string>
    <string name="back_light">背光补偿</string>
    <string name="option_mode">自动（日/夜）</string>
    <string name="daytime">白天</string>
    <string name="night">夜晚</string>
    <string name="auto">自动</string>
    <string name="connet_failed">网络连接失败，请重试</string>
    <string name="connet_canceled">网络连接被取消！</string>
    <string name="size">尺寸</string>
    <string name="import_content">选择导入内容</string>
    <string name="local_photo">本地照片</string>
    <string name="local_video">本地视频</string>
    <string name="shot">张</string>
    <string name="option_album">选择相册</string>
    <string name="option_photo">选择图片</string>
    <string name="import_photo">导入</string>
    <string name="choose">选择</string>
    <string name="share">分享</string>
    <string name="please_choose">请选择</string>
    <string name="local">本地</string>
    <string name="all">全部</string>
    <string name="least_chose_one">请至少勾选一项</string>
    <string name="edit_share">编缉/分享</string>
    <string name="delete_ok">删除成功</string>
    <string name="cant_delete">无可删项</string>
    <string name="filter_mirror">滤镜</string>
    <string name="adjust">调整</string>
    <string name="go_on">继续</string>
    <string name="brightness">亮度</string>
</resources>
