<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/image_set" />

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/back_3x" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_backlight_compensation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/back_light" />

        <ImageView
            android:id="@+id/image_backlight_compensation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/switch_off" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_low_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/low_light" />

        <ImageView
            android:id="@+id/image_low_light"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/switch_off" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/mode" />

        <TextView
            android:id="@+id/tv_option_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/option_mode" />
    </RelativeLayout>





        <TextView
            android:id="@+id/tv_daytime"
            style="@style/DayNightStyle"
            android:text="@string/daytime" />

        <TextView
            android:id="@+id/tv_night"
            style="@style/DayNightStyle"
            android:text="@string/night"/>

        <TextView
            android:id="@+id/tv_auto"
            style="@style/DayNightStyle"
            android:text="@string/auto"/>

</LinearLayout>