<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_theme"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="10dp"
            android:text="@string/common_set"
            android:textColor="@color/black_theme"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@mipmap/close_black" />
    </RelativeLayout>

    <TextView
        style="@style/StyleCommonSetLayout"
        android:text="@string/unit"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/layout_foot"
        style="@style/StyleCommonSetLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/foot"
            android:textColor="@color/grey_text_color"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/image_choosed_foot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/choosed"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_meter"
        style="@style/StyleCommonSetLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/grey_text_color"
            android:text="@string/meter" />

        <ImageView
            android:id="@+id/image_choosed_meter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/choosed"
            android:visibility="invisible" />
    </RelativeLayout>

    <TextView
        style="@style/StyleCommonSetLayout"
        android:text="@string/temperature"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/layout_degree_centigrade"
        style="@style/StyleCommonSetLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/grey_text_color"
            android:text="@string/degree_centigrade" />

        <ImageView
            android:id="@+id/image_degree_centigrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/choosed"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_degree_fahrenheit"
        style="@style/StyleCommonSetLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/grey_text_color"
            android:text="@string/degree_fahrenheit"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/image_degree_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/choosed"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>