<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:background="@color/color_f7f7f7"
        android:paddingLeft="@dimen/dp10"
        android:paddingRight="@dimen/dp10">

        <TextView
            android:id="@+id/tv_cancel_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textColor="@color/color_025dc8"
            android:textSize="@dimen/sp14" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_a_province"
            android:textColor="@color/color_333"
            android:textSize="@dimen/sp14" />

        <TextView
            android:id="@+id/tv_confirm_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/complete"
            android:textColor="@color/color_025dc8"
            android:textSize="@dimen/sp14" />
    </RelativeLayout>

    <com.qiyuan.fifish.ui.view.CustomBirthdaySelectView
        android:id="@+id/custom_birth_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp15"
        android:paddingBottom="@dimen/dp15"
        />
</LinearLayout>